# API-Dashboard

./: .gitignore  README.md  api_dashboard_backend.py  api_dashboard_frontend.html  pyproject.toml
api_dashboard/: main.py
