[project]
name = "api-dashboard"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
]

[project.scripts]
api-dashboard = "api_dashboard.main:run"

[tool.hatch.build.targets.wheel]
packages = ["api_dashboard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
